--- a/src/main/frontend/H_Hospital_App/assets/map.html
+++ b/src/main/frontend/H_Hospital_App/assets/map.html
@@ -2,9 +2,9 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <title>카카오 맵</title>
-  <script src="https://dapi.kakao.com/v2/maps/sdk.js?appkey=acb92b206b6bd053c6440e8e1db3ff2a&autoload=false"></script>
+  <script src="https://dapi.kakao.com/v2/maps/sdk.js?appkey=acb92b206b6bd053c6440e8e1db3ff2a"></script>
   <style>
     body, html { height: 100%; margin: 0; padding: 0; }
     #map { width: 100%; height: 100%; }
@@ -13,15 +13,26 @@
 <body>
   <div id="map"></div>
   <script>
-    // 카카오 맵 API 로드 후 지도 초기화
-    kakao.maps.load(function() {
-      var container = document.getElementById('map');
-      var options = {
-        center: new kakao.maps.LatLng(37.5665, 126.978),
-        level: 3
-      };
-      var map = new kakao.maps.Map(container, options);
-    });
+    var map, marker;
+    function initMap() {
+      try {
+        var container = document.getElementById('map');
+        var options = {
+          center: new kakao.maps.LatLng(37.5665, 126.978),
+          level: 3
+        };
+        map = new kakao.maps.Map(container, options);
+        marker = new kakao.maps.Marker({
+          position: new kakao.maps.LatLng(37.5665, 126.978)
+        });
+        marker.setMap(map);
+        window.ReactNativeWebView.postMessage('Map loaded successfully');
+      } catch (error) {
+        console.error('Error initializing map:', error.message);
+        window.ReactNativeWebView.postMessage('Error initializing map: ' + error.message);
+      }
+    }
+    kakao.maps.load(initMap);
   </script>
 </body>
 </html>
